# automaton-auditor

./: .env.examples  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
audit/report_onpeer_generated/: detectives_only.md  report_onpeer_generated.md
audit/report_onself_generated/: mine_detectives_only.md
reports/: interim_report.md  interim_submission.md
rubric/: week2_rubric.json
src/: config.py  graph.py  main.py  state.py
src/nodes/: aggregator.py  detectives.py  judges.py  justice.py  report.py  run_detectives.py
src/tools/: ast_tools.py  doc_tools.py  filesystem.py  git_tools.py  pdf_tools.py  repo_tools.py  vision_tools.py
